Merge: Add Claude async API backend + improved frontend
Major additions:
- Express backend with Claude API integration (src/server.js)
- Async processing with Make.com webhooks
- Batch upload system with smart file ordering
- Real-time progress tracking per file
- Enhanced error handling and logging (Winston)
- Docker support for Railway deployment (Dockerfile)

Frontend improvements:
- 3-column layout (Settings | Upload | Files)
- Drag & drop multi-file upload
- Per-file status indicators
- User selection buttons with icons
- Progress bar with detailed file info
- Improved responsive design

Backend architecture:
- /api/process - Claude API integration
- /api/status - Batch status polling
- /health - Health check endpoint
- Rate limiting and CORS configuration
- Structured logging with Winston
- Request tracking and cleanup

Infrastructure:
- Dockerfile optimized for Railway
- Environment variables configuration
- .gitignore for secrets
- Comprehensive documentation

Testing:
- Test frontend (test/test-frontend.html)
- Example prompts and blueprints
- 133-field extraction examples

This merge brings the app to production-ready state with async
processing, better UX, and full backend integration.

--- a/src/apps/prisliste-app/index.html
+++ b/src/apps/prisliste-app/index.html
@@ -225,9 +225,26 @@
                     app.showMessage('Sender prisliste til Make.com...', 'success');
                 },
                 onProgress: (progress) => {
-                    app.setProgress(progress);
+                    app.setProgress(progress, true, {
+                        status: 'Laster opp prisliste...',
+                        currentFile: file.name,
+                        currentFileIndex: 0,
+                        totalFiles: 1,
+                        currentFileSize: file.size,
+                        totalSize: file.size,
+                        processedSize: (progress / 100) * file.size
+                    });
                 },
                 onSuccess: (message) => {
+                    app.setProgress(100, true, {
+                        status: 'Prisliste sendt!',
+                        currentFile: file.name,
+                        currentFileIndex: 0,
+                        totalFiles: 1,
+                        currentFileSize: file.size,
+                        totalSize: file.size,
+                        processedSize: file.size
+                    });
                     app.showMessage(config.APP_CONFIG.messages.success.prislisteUploaded, 'success');
                 },
                 onError: (error) => {
